crates/rehearse/tests/ui/operation/fail/method_receiver.rs
use rehearse::operation;

#[derive(Debug)]
struct Error;

struct Services;

impl Services {
    #[operation(impact = read)]
    async fn bad(&self) -> Result<(), Error> {
        Ok(())
    }
}

fn main() {}

